# osqp_cuda

./: CMakeLists.txt  pyproject.toml  setup.py
.github/workflows/: build.yml  build_cuda.yml  build_default.yml  build_default.yml.disabled  build_mkl.yml  prepare_build_environment_linux_cuda.sh  prepare_build_environment_windows_cuda.sh
src/osqp/: _version.py  interface.py
