[build-system]
requires = ["setuptools>=40.8.0", "wheel", "oldest-supported-numpy", "scipy>=0.13.2"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp3*"
skip = "*-win32 *-manylinux_i686 *-musllinux_*"
# test-requires = ["pytest", "git+git://github.com/osqp/osqp-python.git@vb/pybind11"]
# The OSQP_ALGEBRA envvar is not strictly required, since OSQP will pick up the "best" algebra available,
#   but we can force the usage of a particular algebra by specifying this.
# test-command = "OSQP_ALGEBRA=cuda pytest -s $(python -c \"import osqp; print(osqp.__path__[0])\")/tests"

[tool.cibuildwheel.linux]
environment = { OSQP_ALGEBRA="cuda" }
before-all = ".github/workflows/prepare_build_environment_linux_cuda.sh"

[tool.cibuildwheel.windows]
environment = { OSQP_ALGEBRA="cuda" }
before-all = "bash .github/workflows/prepare_build_environment_windows_cuda.sh"
