[build-system]
requires = ["setuptools>=40.8.0", "wheel", "oldest-supported-numpy", "scipy>=0.13.2"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp38-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_*"
test-requires = ["pytest", "git+git://github.com/osqp/osqp-python.git@vb/pybind11"]
# test-command = "OSQP_ALGEBRA=cuda pytest -s $(python -c \"import osqp; print(osqp.__path__[0])\")/tests"
test-command = "OSQP_ALGEBRA=cuda python -c \"from osqp import default_algebra; assert(default_algebra()=='cuda')\""

[tool.cibuildwheel.linux]
environment = { OSQP_ALGEBRA="cuda", CMAKE_CUDA_COMPILER="/usr/local/cuda/bin/nvcc", CUDA_TOOLKIT_ROOT_DIR="/usr/local/cuda" }
before-all = ".github/workflows/prepare_build_environment_linux_cuda.sh"
repair-wheel-command = ""

[tool.cibuildwheel.windows]
environment = { OSQP_ALGEBRA="cuda" }
before-all = "bash .github/workflows/prepare_build_environment_windows_cuda.sh"
